# HomeWork

./: .gitignore  README.md
Calculating/: .gitignore  README.md  homework.md
OS/SimpleFileSystem/: .gitignore  CMakeLists.txt  README.md
OS/SimpleFileSystem/Xcode/SimpleFileSystem.build/Debug/ALL_BUILD.build/: Script-BF58EB0EFF6C4A5781F01A46.sh
OS/SimpleFileSystem/Xcode/SimpleFileSystem.build/Debug/SimpleFileSystem.build/Objects-normal/x86_64/: MD5.dia
OS/SimpleFileSystem/Xcode/SimpleFileSystem.build/Debug/ZERO_CHECK.build/: Script-3FF414E2504842668C5B9CAF.sh
OS/SimpleFileSystem/src/: MD5.cpp  Main.cpp  MyExt.cpp  MyExt.h
OS/SimpleFileSystem/src/header/: FCB.h  INode.h  MD5.h  MyExt.h  SuperBlock.h  User.h
OS/SimpleFileSystem/xcode/SimpleFileSystem.build/Debug/ALL_BUILD.build/: Script-2E0E1223DDC64044915562B4.sh  dgph
OS/SimpleFileSystem/xcode/SimpleFileSystem.build/Debug/SimpleFileSystem.build/: dgph
OS/SimpleFileSystem/xcode/SimpleFileSystem.build/Debug/ZERO_CHECK.build/: Script-B7871691CF914952939B7227.sh  dgph
OS/SimpleFileSystem/xcode/SimpleFileSystem.xcodeproj/: project.pbxproj
OS/SimpleFileSystem/xcode/SimpleFileSystem.xcodeproj/project.xcworkspace/xcuserdata/lostmoonkin.xcuserdatad/: UserInterfaceState.xcuserstate
OS/SimpleFileSystem/xcode/SimpleFileSystem.xcodeproj/xcuserdata/lostmoonkin.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
OS/SimpleFileSystem/xcode/SimpleFileSystem.xcodeproj/xcuserdata/lostmoonkin.xcuserdatad/xcschemes/: ALL_BUILD.xcscheme  SimpleFileSystem.xcscheme  ZERO_CHECK.xcscheme  xcschememanagement.plist
(+81 files in other folders)
